--- a/dashboard.html
+++ b/dashboard.html
@@ -51,7 +51,7 @@
         <div class="row px-5 justify-content-center">
             <div class="col-sm-5 col-lg-3 mb-4">
                 <div class="card grow">
-                    <a href="DiarioPeso.html" class="text-decoration-none">
+                    <a href="diarioPeso.html" class="text-decoration-none">
                         <img class="card-img-top" src="assets/runner.jpg" />
                         <div class="card-body text-body">
                             <h5 class="card-title">Diário de Peso</h5>
@@ -64,7 +64,7 @@
 
             <div class="col-sm-5 col-lg-3 mb-4">
                 <div class="card grow">
-                    <a href="DiarioRefeicao.html" class="text-decoration-none">
+                    <a href="diarioRefeicao.html" class="text-decoration-none">
                         <img class="card-img-top" src="assets/alimentacao.jpg" />
                         <div class="card-body text-body">
                             <h5 class="card-title">Diario de Refeições</h5>
